# cliverge

./: .gitignore  BUILD.md  Cargo.toml  DESIGN_SPEC.md  DESIGN_SPEC_SIMPLIFIED.md  IMPLEMENTATION_ANALYSIS_REPORT.md  LICENSE  README.md  README_zh.md  REFACTOR_PLAN.md  VERSION_CHECK_STRATEGY.md  clippy.toml  create-release-tag.sh  manual-tag-push.ps1  run_debug.bat  test-cargo-dist.ps1
.github/workflows/: auto-release.yml  ci.yml  release.yml
configs/: settings.json  tools.json
crates/cliverge-cli/: Cargo.toml
crates/cliverge-cli/src/: main.rs
crates/cliverge-core/: Cargo.toml
crates/cliverge-core/src/: cache.rs  config.rs  error.rs  lib.rs  tool.rs  version.rs
crates/cliverge-gui/: Cargo.toml  build.rs
crates/cliverge-gui/src/: app.rs  cache.rs  lib.rs  main.rs  main_minimal.rs  settings.rs  terminal.rs
crates/cliverge-registry/: Cargo.toml
crates/cliverge-registry/src/: lib.rs
crates/cliverge-sdk/: Cargo.toml
crates/cliverge-sdk/src/: lib.rs
crates/cliverge-tools/: Cargo.toml
crates/cliverge-tools/src/: claude_code.rs  gemini.rs  gemini_cli.rs  iflow.rs  lib.rs  openai_codex.rs  opencode.rs  qwen.rs  qwen_code.rs
crates/cliverge-ui/: Cargo.toml
crates/cliverge-ui/src/: lib.rs
docs/: AUTO_RELEASE_GUIDE.md  BUILD_SCRIPTS_GUIDE.md  DEPLOYMENT_OPTIMIZATION.md  ICON_GUIDE.md  LOG_WINDOW_ENHANCEMENT_GUIDE.md  OPTIMIZATION_RESULTS.md  PHASE2_OPTIMIZATION_RESULTS.md  PHASE3_FINAL_OPTIMIZATION.md  data_structure_analysis.md
scripts/: build-optimized.bat  bump-version.ps1  bump-version.sh  release.bat  test-release.ps1
