[package]
name = "cliverge-cli"
version = "0.1.0"
edition = "2021"
description = "CLI interface for CLIverge"
[[bin]]
name = "cliverge"
path = "src/main.rs"
[dependencies]
cliverge-core = { path = "../cliverge-core" }
cliverge-tools = { path = "../cliverge-tools" }
cliverge-sdk = { path = "../cliverge-sdk" }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
colored = "2.0"

