[package]
name = "cliverge-core"
version = "0.1.0"
edition = "2021"
description = "Core engine and business logic for CLIverge"
[dependencies]
tokio = { workspace = true, features = ["process"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
# regex = "1.0"  # Removed to reduce binary size

