[package]
name = "cliverge-core"
version = "0.1.1"
edition = "2021"
description = "Core engine for universal CLI tool management"

# Config for 'cargo dist' - this is a library, not for distribution
[package.metadata.dist]
dist = false
[dependencies]
tokio = { workspace = true, features = ["process"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
# regex = "1.0"  # Removed to reduce binary size

