[package]
name = "cliverge-core"
version = "0.1.9"
edition = "2021"
description = "Core engine for universal CLI tool management"
repository = "https://github.com/binaryrisker/cliverge"
license = "MIT OR Apache-2.0"
authors = ["binaryrisker"]
homepage = "https://github.com/binaryrisker/cliverge"

# Config for 'cargo dist' - this is a library, not for distribution
[package.metadata.dist]
dist = false
[dependencies]
tokio = { workspace = true, features = ["process"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
# regex = "1.0"  # Removed to reduce binary size

