[package]
name = "cliverge"
version = "0.1.2"
edition = "2021"
description = "GUI interface for CLIverge"

# Config for 'cargo dist'
[package.metadata.dist]
# Enable distribution for this package
dist = true

# Hide console window on Windows
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon", "winuser", "consoleapi"] }

[dependencies]
cliverge-core = { path = "../cliverge-core" }
eframe = { version = "0.24", default-features = false, features = ["default_fonts", "glow"] }
egui = { version = "0.24", default-features = false, features = ["default_fonts"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
# tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }  # Simplified logging
dirs = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
webbrowser = { version = "0.8", default-features = false }
# image = { version = "0.24", default-features = false, features = ["png"] }  # Removed, not directly used

# Windows resource file for icon
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[[bin]]
name = "cliverge"
path = "src/main.rs"

